--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.orhanobut:logger:1.12'
-
-
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
