--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.professorlee.foodnotes"
+        applicationId "com.lu.luandroid.foodnotes"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
