--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.professorlee.foodnotes">
+    package="com.lu.luandroid.foodnotes">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -22,25 +22,25 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Login">
+        <activity android:name="com.lu.luandroid.foodnotes.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.lu.luandroid.foodnotes.MainActivity" />
         <activity
-            android:name=".AddFood"
+            android:name="com.lu.luandroid.foodnotes.AddFood"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".MapActivity" />
-        <activity android:name=".FoodList" />
+        <activity android:name="com.lu.luandroid.foodnotes.MapActivity" />
+        <activity android:name="com.lu.luandroid.foodnotes.FoodList" />
         <activity
-            android:name=".FoodDetail"
+            android:name="com.lu.luandroid.foodnotes.FoodDetail"
             android:theme="@style/CustomAppTheme" />
 
-        <activity android:name=".Search_Food" />
+        <activity android:name="com.lu.luandroid.foodnotes.Search_Food" />
         <activity
-            android:name=".Edit_FoodDetail"
+            android:name="com.lu.luandroid.foodnotes.Edit_FoodDetail"
             android:theme="@style/CustomAppTheme" />
     </application>
 
